Corrige altura do conteúdo central

--- a/estoquista.html
+++ b/estoquista.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SwiftPro – Estoquista Ana Silva</title>
+    <title>SwiftPro – Estoquista Ana Silva</title>
     <link
       rel="shortcut icon"
       href="assets/images/favicon.ico.svg"
@@ -174,8 +174,8 @@
       </div>
     </nav>
 
-    <div class="main-content">
-      <header class="py-5 bg-brand-soft border-bottom">
+    <main class="main-content">
+      <div class="py-5 bg-brand-soft border-bottom">
         <div class="container">
           <div class="row align-items-start g-4">
             <div class="col-12 col-lg-5">
@@ -499,10 +499,8 @@
             </div>
           </div>
         </div>
-      </header>
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/js/main.js"></script>
+      </div>
+    </main>
     <!-- Abrir disputa (colaborador) -->
     <div
       class="modal fade"
@@ -551,10 +549,7 @@
       </div>
     </div>
 
-      <!-- ...existing code... -->
-    </div>
-
-    <footer class="py-4 mt-4">
+    <footer class="py-4">
       <div
         class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
       >
@@ -569,5 +564,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
