--- a/historico.html
+++ b/historico.html
@@ -6,8 +6,12 @@
     <title>SwiftPro – Gamificação para Lojas</title>
 
     <!-- Favicon -->
-     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
-     
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico.svg"
+      type="image/x-icon"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -76,21 +80,52 @@
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
               <!-- Sininho de notificação -->
               <div class="nav-item dropdown position-relative me-2">
-                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                <a
+                  href="#"
+                  class="nav-link p-0"
+                  id="notificationDropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  title="Notificações"
+                  role="button"
+                >
                   <i class="bi bi-bell-fill fs-4 text-brand"></i>
-                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                  <span
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                    style="font-size: 0.7em"
+                  >
                     3
                     <span class="visually-hidden">notificações não lidas</span>
                   </span>
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                <ul
+                  class="dropdown-menu dropdown-menu-end mt-2"
+                  aria-labelledby="notificationDropdown"
+                  style="min-width: 280px"
+                >
                   <li class="dropdown-header">Notificações</li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="missoes.html"
+                      ><strong>Nova missão criada pelo gerente</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="ranking.html"
+                      ><strong>Você subiu de posição no ranking!</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><strong>Disputa resolvida pelo gerente</strong></a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item text-center text-muted" href="#"
+                      >Ver todas</a
+                    >
+                  </li>
                 </ul>
               </div>
               <!-- Menu dropdown do usuário -->
@@ -155,116 +190,128 @@
 
     <div class="main-content">
       <section id="historico" class="py-5">
-      <div class="container">
-        <h2 class="h4 mb-3">Histórico</h2>
-        <div class="mb-3">
-          <label for="filtroTipo" class="form-label mb-1">Filtrar por:</label>
-          <select class="form-select w-auto d-inline-block" id="filtroTipo" onchange="filtrarHistorico()">
-            <option value="">Todos</option>
-            <option value="Venda">Vendas</option>
-            <option value="Missão">Missões</option>
-            <option value="NPS">NPS</option>
-          </select>
-        </div>
-        <div class="card">
-          <div class="table-responsive">
-            <table class="table align-middle mb-0" id="tabelaHistorico">
-              <thead>
-                <tr>
-                  <th>Data</th>
-                  <th>Tipo</th>
-                  <th>Detalhe</th>
-                  <th>Pontos</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>07/09</td>
-                  <td>Venda</td>
-                  <td>R$ 126 • Cross-sell</td>
-                  <td>+40</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>06/09</td>
-                  <td>Missão</td>
-                  <td>Combo da Semana</td>
-                  <td>+60</td>
-                  <td><span class="badge bg-warning text-dark">Em revisão</span></td>
-                </tr>
-                <tr>
-                  <td>06/09</td>
-                  <td>NPS</td>
-                  <td>Avaliação 10</td>
-                  <td>+50</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>05/09</td>
-                  <td>Venda</td>
-                  <td>R$ 210 • Venda simples</td>
-                  <td>+30</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>05/09</td>
-                  <td>Missão</td>
-                  <td>Desafio NPS Excelente</td>
-                  <td>+80</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>04/09</td>
-                  <td>NPS</td>
-                  <td>Avaliação 9</td>
-                  <td>+40</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>03/09</td>
-                  <td>Venda</td>
-                  <td>R$ 95 • Cross-sell</td>
-                  <td>+20</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>03/09</td>
-                  <td>Missão</td>
-                  <td>Meta de Vendas</td>
-                  <td>+100</td>
-                  <td><span class="badge bg-warning text-dark">Em revisão</span></td>
-                </tr>
-                <tr>
-                  <td>02/09</td>
-                  <td>NPS</td>
-                  <td>Avaliação 8</td>
-                  <td>+30</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-                <tr>
-                  <td>01/09</td>
-                  <td>Venda</td>
-                  <td>R$ 180 • Venda simples</td>
-                  <td>+25</td>
-                  <td><span class="badge bg-success">Computado</span></td>
-                </tr>
-              </tbody>
-            </table>
+        <div class="container">
+          <h2 class="h4 mb-3">Histórico</h2>
+          <div class="mb-3">
+            <label for="filtroTipo" class="form-label mb-1">Filtrar por:</label>
+            <select
+              class="form-select w-auto d-inline-block"
+              id="filtroTipo"
+              onchange="filtrarHistorico()"
+            >
+              <option value="">Todos</option>
+              <option value="Venda">Vendas</option>
+              <option value="Missão">Missões</option>
+              <option value="NPS">NPS</option>
+            </select>
+          </div>
+          <div class="card">
+            <div class="table-responsive">
+              <table class="table align-middle mb-0" id="tabelaHistorico">
+                <thead>
+                  <tr>
+                    <th>Data</th>
+                    <th>Tipo</th>
+                    <th>Detalhe</th>
+                    <th>Pontos</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>07/09</td>
+                    <td>Venda</td>
+                    <td>R$ 126 • Cross-sell</td>
+                    <td>+40</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>06/09</td>
+                    <td>Missão</td>
+                    <td>Combo da Semana</td>
+                    <td>+60</td>
+                    <td>
+                      <span class="badge bg-warning text-dark">Em revisão</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>06/09</td>
+                    <td>NPS</td>
+                    <td>Avaliação 10</td>
+                    <td>+50</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>05/09</td>
+                    <td>Venda</td>
+                    <td>R$ 210 • Venda simples</td>
+                    <td>+30</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>05/09</td>
+                    <td>Missão</td>
+                    <td>Desafio NPS Excelente</td>
+                    <td>+80</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>04/09</td>
+                    <td>NPS</td>
+                    <td>Avaliação 9</td>
+                    <td>+40</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>03/09</td>
+                    <td>Venda</td>
+                    <td>R$ 95 • Cross-sell</td>
+                    <td>+20</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>03/09</td>
+                    <td>Missão</td>
+                    <td>Meta de Vendas</td>
+                    <td>+100</td>
+                    <td>
+                      <span class="badge bg-warning text-dark">Em revisão</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>02/09</td>
+                    <td>NPS</td>
+                    <td>Avaliação 8</td>
+                    <td>+30</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                  <tr>
+                    <td>01/09</td>
+                    <td>Venda</td>
+                    <td>R$ 180 • Venda simples</td>
+                    <td>+25</td>
+                    <td><span class="badge bg-success">Computado</span></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
     </div>
 
-    <footer class="py-4 mt-4">
-      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
+    <footer class="py-4">
+      <div
+        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
+      >
         <div class="text-muted small">
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html"
+            >Ajuda</a
+          >
         </div>
       </div>
     </footer>
@@ -273,14 +320,14 @@
     <script src="assets/js/main.js"></script>
     <script>
       function filtrarHistorico() {
-        const filtro = document.getElementById('filtroTipo').value;
-        const linhas = document.querySelectorAll('#tabelaHistorico tbody tr');
-        linhas.forEach(linha => {
+        const filtro = document.getElementById("filtroTipo").value;
+        const linhas = document.querySelectorAll("#tabelaHistorico tbody tr");
+        linhas.forEach((linha) => {
           const tipo = linha.children[1].textContent;
           if (!filtro || tipo === filtro) {
-            linha.style.display = '';
+            linha.style.display = "";
           } else {
-            linha.style.display = 'none';
+            linha.style.display = "none";
           }
         });
       }
