--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <li class="nav-item">
-              </li>
+              <li class="nav-item"></li>
               <li class="nav-item">
                 <a class="nav-link" href="ranking.html">Ranking</a>
               </li>
@@ -790,7 +789,7 @@
       </section>
     </div>
 
-    <footer class="py-4 mt-4">
+    <footer class="py-4">
       <div
         class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
       >
