--- a/termo.html
+++ b/termo.html
@@ -227,7 +227,7 @@
       </main>
     </div>
 
-    <footer class="py-4 mt-4 bg-light border-top">
+    <footer class="py-4 bg-light border-top">
       <div
         class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
       >
