--- a/config.html
+++ b/config.html
@@ -6,8 +6,12 @@
     <title>SwiftPro – Gamificação para Lojas</title>
 
     <!-- Favicon -->
-     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
-     
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico.svg"
+      type="image/x-icon"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,28 +26,38 @@
     <!-- Sistema de Autenticação -->
     <script src="assets/js/auth.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
+      document.addEventListener("DOMContentLoaded", function () {
         try {
           var user = null;
-          var userData = sessionStorage.getItem('swift_user') || localStorage.getItem('swift_user');
+          var userData =
+            sessionStorage.getItem("swift_user") ||
+            localStorage.getItem("swift_user");
           if (userData) user = JSON.parse(userData);
-          if (user && user.role === 'gerente') {
-            var navLinks = document.querySelectorAll('a.nav-link');
-            navLinks.forEach(function(link) {
+          if (user && user.role === "gerente") {
+            var navLinks = document.querySelectorAll("a.nav-link");
+            navLinks.forEach(function (link) {
               var txt = link.textContent.trim();
-              if (txt === 'Ranking' || txt === 'Missões' || txt === 'Trilha de Aprendizagem') {
-                link.style.display = 'none';
+              if (
+                txt === "Ranking" ||
+                txt === "Missões" ||
+                txt === "Trilha de Aprendizagem"
+              ) {
+                link.style.display = "none";
               }
             });
-            var userMenuLinks = document.querySelectorAll('.dropdown-menu a.dropdown-item');
-            userMenuLinks.forEach(function(link) {
+            var userMenuLinks = document.querySelectorAll(
+              ".dropdown-menu a.dropdown-item"
+            );
+            userMenuLinks.forEach(function (link) {
               var txt = link.textContent.trim();
-              if (txt.includes('Histórico')) {
-                link.style.display = 'none';
+              if (txt.includes("Histórico")) {
+                link.style.display = "none";
               }
             });
           }
-        } catch(e) { console.warn('Erro ao ocultar navegação para gerente:', e); }
+        } catch (e) {
+          console.warn("Erro ao ocultar navegação para gerente:", e);
+        }
       });
     </script>
     <!-- Sistema de Avatar -->
@@ -99,17 +113,19 @@
               <li class="nav-item">
                 <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
               </li>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const user = window.getCurrentUser && window.getCurrentUser();
-        if (user && user.role === "estoquista") {
-          const navIndex = document.getElementById("navIndexColaborador");
-          if (navIndex) navIndex.style.display = "none";
-          const logo = document.getElementById("swiftproLogo");
-          if (logo) logo.setAttribute("href", "estoquista.html");
-        }
-      });
-    </script>
+              <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                  const user = window.getCurrentUser && window.getCurrentUser();
+                  if (user && user.role === "estoquista") {
+                    const navIndex = document.getElementById(
+                      "navIndexColaborador"
+                    );
+                    if (navIndex) navIndex.style.display = "none";
+                    const logo = document.getElementById("swiftproLogo");
+                    if (logo) logo.setAttribute("href", "estoquista.html");
+                  }
+                });
+              </script>
               <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
@@ -120,21 +136,52 @@
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
               <!-- Sininho de notificação -->
               <div class="nav-item dropdown position-relative me-2">
-                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                <a
+                  href="#"
+                  class="nav-link p-0"
+                  id="notificationDropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  title="Notificações"
+                  role="button"
+                >
                   <i class="bi bi-bell-fill fs-4 text-brand"></i>
-                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                  <span
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                    style="font-size: 0.7em"
+                  >
                     3
                     <span class="visually-hidden">notificações não lidas</span>
                   </span>
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                <ul
+                  class="dropdown-menu dropdown-menu-end mt-2"
+                  aria-labelledby="notificationDropdown"
+                  style="min-width: 280px"
+                >
                   <li class="dropdown-header">Notificações</li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="missoes.html"
+                      ><strong>Nova missão criada pelo gerente</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="ranking.html"
+                      ><strong>Você subiu de posição no ranking!</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><strong>Disputa resolvida pelo gerente</strong></a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item text-center text-muted" href="#"
+                      >Ver todas</a
+                    >
+                  </li>
                 </ul>
               </div>
               <!-- Menu dropdown do usuário -->
@@ -161,9 +208,11 @@
                   <li class="dropdown-header">
                     <div class="fw-semibold" data-user-name>Usuário</div>
                     <small class="text-muted" data-user-email
-                      >usuario@swift.com</small>
+                      >usuario@swift.com</small
+                    >
                     <small class="text-muted d-block" data-user-role
-                      >Carregando...</small>
+                      >Carregando...</small
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -192,118 +241,122 @@
 
     <div class="main-content">
       <section id="config" class="py-5">
-      <div class="container">
-        <h2 class="h4 mb-3">Configurações</h2>
-        <div class="row g-3">
-          <div class="col-12 col-lg-6">
-            <div class="card h-100">
-              <div class="card-header">Perfil</div>
-              <div class="card-body">
-                <form class="row g-3">
-                  <div class="col-12">
-                    <label class="form-label">Nome</label>
-                    <input
-                      class="form-control"
-                      placeholder="Seu nome"
-                      value="Lucas"
-                    />
-                  </div>
-                  <div class="col-12">
-                    <label class="form-label">Loja</label>
-                    <input
-                      id="storeInput"
-                      class="form-control"
-                      placeholder="Loja Swift"
-                      value="Vila Mariana"
-                    />
-                    <small
-                      class="text-muted"
-                      id="storeHelp"
-                      style="display: none"
-                    >
-                      Apenas gerentes podem alterar a loja.
-                    </small>
-                  </div>
-                  <div class="col-12">
-                    <label class="form-label">Foto de Perfil</label>
-                    <div class="d-flex align-items-center gap-3 mb-3">
-                      <img
-                        id="profileImagePreview"
-                        src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=64&h=64&fit=crop&crop=face&auto=format"
-                        alt="Foto de perfil atual"
-                        width="64"
-                        height="64"
-                        class="rounded-circle border"
+        <div class="container">
+          <h2 class="h4 mb-3">Configurações</h2>
+          <div class="row g-3">
+            <div class="col-12 col-lg-6">
+              <div class="card h-100">
+                <div class="card-header">Perfil</div>
+                <div class="card-body">
+                  <form class="row g-3">
+                    <div class="col-12">
+                      <label class="form-label">Nome</label>
+                      <input
+                        class="form-control"
+                        placeholder="Seu nome"
+                        value="Lucas"
                       />
-                      <div class="flex-grow-1">
-                        <input
-                          id="profileImageInput"
-                          type="file"
-                          class="form-control"
-                          accept="image/*"
-                        />
-                        <small class="text-muted"
-                          >Recomendado: imagem quadrada, máximo 2MB.</small
-                        >
-                      </div>
                     </div>
-                    <div class="alert alert-info d-none" id="uploadStatus">
-                      <small>
-                        <i class="bi bi-info-circle me-1"></i>
-                        <span id="uploadMessage">Processando imagem...</span>
+                    <div class="col-12">
+                      <label class="form-label">Loja</label>
+                      <input
+                        id="storeInput"
+                        class="form-control"
+                        placeholder="Loja Swift"
+                        value="Vila Mariana"
+                      />
+                      <small
+                        class="text-muted"
+                        id="storeHelp"
+                        style="display: none"
+                      >
+                        Apenas gerentes podem alterar a loja.
                       </small>
                     </div>
-                  </div>
-                  <div class="col-12">
-                    <button type="button" class="btn btn-primary">
-                      Salvar
-                    </button>
-                  </div>
-                </form>
+                    <div class="col-12">
+                      <label class="form-label">Foto de Perfil</label>
+                      <div class="d-flex align-items-center gap-3 mb-3">
+                        <img
+                          id="profileImagePreview"
+                          src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=64&h=64&fit=crop&crop=face&auto=format"
+                          alt="Foto de perfil atual"
+                          width="64"
+                          height="64"
+                          class="rounded-circle border"
+                        />
+                        <div class="flex-grow-1">
+                          <input
+                            id="profileImageInput"
+                            type="file"
+                            class="form-control"
+                            accept="image/*"
+                          />
+                          <small class="text-muted"
+                            >Recomendado: imagem quadrada, máximo 2MB.</small
+                          >
+                        </div>
+                      </div>
+                      <div class="alert alert-info d-none" id="uploadStatus">
+                        <small>
+                          <i class="bi bi-info-circle me-1"></i>
+                          <span id="uploadMessage">Processando imagem...</span>
+                        </small>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <button type="button" class="btn btn-primary">
+                        Salvar
+                      </button>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <div class="card h-100">
-              <div class="card-header">Preferências</div>
-              <div class="card-body">
-                <div class="form-check form-switch">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="notif1"
-                    checked
-                  />
-                  <label class="form-check-label" for="notif1"
-                    >Notificar novas missões</label
-                  >
-                </div>
-                <div class="form-check form-switch">
-                  <input
-                    class="form-check-input"
-                    type="checkbox"
-                    id="notif2"
-                    checked
-                  />
-                  <label class="form-check-label" for="notif2"
-                    >Notificar mudanças no ranking</label
-                  >
-                </div>
-                <div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" id="notif3" />
-                  <label class="form-check-label" for="notif3"
-                    >Resumo semanal por email</label
-                  >
+            <div class="col-12 col-lg-6">
+              <div class="card h-100">
+                <div class="card-header">Preferências</div>
+                <div class="card-body">
+                  <div class="form-check form-switch">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="notif1"
+                      checked
+                    />
+                    <label class="form-check-label" for="notif1"
+                      >Notificar novas missões</label
+                    >
+                  </div>
+                  <div class="form-check form-switch">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="notif2"
+                      checked
+                    />
+                    <label class="form-check-label" for="notif2"
+                      >Notificar mudanças no ranking</label
+                    >
+                  </div>
+                  <div class="form-check form-switch">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="notif3"
+                    />
+                    <label class="form-check-label" for="notif3"
+                      >Resumo semanal por email</label
+                    >
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
     </div>
 
-    <footer class="py-4 mt-4">
+    <footer class="py-4">
       <div
         class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
       >
@@ -312,7 +365,9 @@
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html"
+            >Ajuda</a
+          >
         </div>
       </div>
     </footer>
