--- a/formulario_ajuda.html
+++ b/formulario_ajuda.html
@@ -238,7 +238,7 @@
     </div>
 
     <!-- Rodapé -->
-    <footer class="footer mt-5 py-3 bg-light border-top">
+    <footer class="footer py-3 bg-light border-top">
       <div
         class="container d-flex flex-column flex-md-row justify-content-between align-items-center gap-2"
       >
