--- a/gerente.html
+++ b/gerente.html
@@ -569,7 +569,7 @@
     </div>
     </div>
 
-    <footer class="py-4 mt-4">
+    <footer class="py-4">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
           © 2025 SwiftPro. Todos os direitos reservados.
