--- a/ranking.html
+++ b/ranking.html
@@ -6,8 +6,12 @@
     <title>SwiftPro – Gamificação para Lojas</title>
 
     <!-- Favicon -->
-     <link rel="shortcut icon" href="assets/images/favicon.ico.svg" type="image/x-icon">
-     
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico.svg"
+      type="image/x-icon"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -86,29 +90,58 @@
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
-              <li class="nav-item">
-              </li>
-              <li class="nav-item">
-              </li>
+              <li class="nav-item"></li>
+              <li class="nav-item"></li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
               <!-- Sininho de notificação -->
               <div class="nav-item dropdown position-relative me-2">
-                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                <a
+                  href="#"
+                  class="nav-link p-0"
+                  id="notificationDropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  title="Notificações"
+                  role="button"
+                >
                   <i class="bi bi-bell-fill fs-4 text-brand"></i>
-                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                  <span
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                    style="font-size: 0.7em"
+                  >
                     3
                     <span class="visually-hidden">notificações não lidas</span>
                   </span>
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                <ul
+                  class="dropdown-menu dropdown-menu-end mt-2"
+                  aria-labelledby="notificationDropdown"
+                  style="min-width: 280px"
+                >
                   <li class="dropdown-header">Notificações</li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
-                  <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
-                  <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="missoes.html"
+                      ><strong>Nova missão criada pelo gerente</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="ranking.html"
+                      ><strong>Você subiu de posição no ranking!</strong></a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><strong>Disputa resolvida pelo gerente</strong></a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item text-center text-muted" href="#"
+                      >Ver todas</a
+                    >
+                  </li>
                 </ul>
               </div>
               <!-- Menu dropdown do usuário -->
@@ -173,93 +206,247 @@
 
     <div class="main-content">
       <section id="ranking" class="py-5">
-      <div class="container">
-        <div class="d-flex align-items-center justify-content-between mb-3">
-          <h2 class="h4 m-0">Ranking</h2>
-          <div class="d-flex gap-2">
-            <label class="form-label mb-0 me-2" for="filtroPeriodo"><strong>Período:</strong></label>
-            <select id="filtroPeriodo" class="form-select form-select-sm" aria-label="Filtrar período">
-              <option>Mês vigente</option>
-              <option>Último mês</option>
-              <option>Últimos 3 meses</option>
-              <option>Personalizado</option>
-            </select>
+        <div class="container">
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h2 class="h4 m-0">Ranking</h2>
+            <div class="d-flex gap-2">
+              <label class="form-label mb-0 me-2" for="filtroPeriodo"
+                ><strong>Período:</strong></label
+              >
+              <select
+                id="filtroPeriodo"
+                class="form-select form-select-sm"
+                aria-label="Filtrar período"
+              >
+                <option>Mês vigente</option>
+                <option>Último mês</option>
+                <option>Últimos 3 meses</option>
+                <option>Personalizado</option>
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="row g-3">
-          <div class="col-12 col-lg-6">
-            <div class="card h-100">
-              <div class="card-header">Local (Loja)</div>
-              <div class="table-responsive">
-                <table class="table align-middle mb-0 table-ranking">
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>Colaborador</th>
-                      <th>Pontos</th>
-                      <th>Nível</th>
-                      <th>Recompensa</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr><td>1</td><td>Lucas</td><td>1.280</td><td><span class="badge bg-warning text-dark">Ouro</span></td><td>Vale Compras</td></tr>
-                    <tr><td>2</td><td>Evelyn</td><td>1.110</td><td><span class="badge bg-warning text-dark">Ouro</span></td><td>Kit Swift</td></tr>
-                    <tr><td>3</td><td>Davi</td><td>980</td><td><span class="badge bg-secondary">Prata</span></td><td>Dia de folga</td></tr>
-                    <tr><td>4</td><td>João</td><td>950</td><td><span class="badge bg-secondary">Prata</span></td><td>Dia de folga</td></tr>
-                    <tr><td>5</td><td>Marina</td><td>900</td><td><span class="badge bg-info">Bronze</span></td><td>Brinde</td></tr>
-                    <tr><td>6</td><td>Rafael</td><td>870</td><td><span class="badge bg-info">Bronze</span></td><td>Brinde</td></tr>
-                    <tr><td>7</td><td>Patrícia</td><td>850</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
-                    <tr><td>8</td><td>André</td><td>820</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
-                    <tr><td>9</td><td>Camila</td><td>800</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
-                    <tr><td>10</td><td>Thiago</td><td>780</td><td><span class="badge bg-light text-dark">Participante</span></td><td>-</td></tr>
-                  </tbody>
-                </table>
+          <div class="row g-3">
+            <div class="col-12 col-lg-6">
+              <div class="card h-100">
+                <div class="card-header">Local (Loja)</div>
+                <div class="table-responsive">
+                  <table class="table align-middle mb-0 table-ranking">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Colaborador</th>
+                        <th>Pontos</th>
+                        <th>Nível</th>
+                        <th>Recompensa</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>Lucas</td>
+                        <td>1.280</td>
+                        <td>
+                          <span class="badge bg-warning text-dark">Ouro</span>
+                        </td>
+                        <td>Vale Compras</td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Evelyn</td>
+                        <td>1.110</td>
+                        <td>
+                          <span class="badge bg-warning text-dark">Ouro</span>
+                        </td>
+                        <td>Kit Swift</td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Davi</td>
+                        <td>980</td>
+                        <td><span class="badge bg-secondary">Prata</span></td>
+                        <td>Dia de folga</td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>João</td>
+                        <td>950</td>
+                        <td><span class="badge bg-secondary">Prata</span></td>
+                        <td>Dia de folga</td>
+                      </tr>
+                      <tr>
+                        <td>5</td>
+                        <td>Marina</td>
+                        <td>900</td>
+                        <td><span class="badge bg-info">Bronze</span></td>
+                        <td>Brinde</td>
+                      </tr>
+                      <tr>
+                        <td>6</td>
+                        <td>Rafael</td>
+                        <td>870</td>
+                        <td><span class="badge bg-info">Bronze</span></td>
+                        <td>Brinde</td>
+                      </tr>
+                      <tr>
+                        <td>7</td>
+                        <td>Patrícia</td>
+                        <td>850</td>
+                        <td>
+                          <span class="badge bg-light text-dark"
+                            >Participante</span
+                          >
+                        </td>
+                        <td>-</td>
+                      </tr>
+                      <tr>
+                        <td>8</td>
+                        <td>André</td>
+                        <td>820</td>
+                        <td>
+                          <span class="badge bg-light text-dark"
+                            >Participante</span
+                          >
+                        </td>
+                        <td>-</td>
+                      </tr>
+                      <tr>
+                        <td>9</td>
+                        <td>Camila</td>
+                        <td>800</td>
+                        <td>
+                          <span class="badge bg-light text-dark"
+                            >Participante</span
+                          >
+                        </td>
+                        <td>-</td>
+                      </tr>
+                      <tr>
+                        <td>10</td>
+                        <td>Thiago</td>
+                        <td>780</td>
+                        <td>
+                          <span class="badge bg-light text-dark"
+                            >Participante</span
+                          >
+                        </td>
+                        <td>-</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6">
+              <div class="card h-100">
+                <div class="card-header">Geral (Regional)</div>
+                <div class="table-responsive">
+                  <table class="table align-middle mb-0 table-ranking">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Colaborador</th>
+                        <th>Pontos</th>
+                        <th>Título</th>
+                        <th>Recompensa</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>Fagner</td>
+                        <td>2.250</td>
+                        <td><span class="badge bg-dark">Lenda Swift</span></td>
+                        <td>Viagem</td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Lucas</td>
+                        <td>2.020</td>
+                        <td><span class="badge bg-dark">Lenda Swift</span></td>
+                        <td>Viagem</td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Evelyn</td>
+                        <td>1.720</td>
+                        <td><span class="badge bg-secondary">Mestre</span></td>
+                        <td>Vale Compras</td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>João</td>
+                        <td>1.500</td>
+                        <td><span class="badge bg-secondary">Mestre</span></td>
+                        <td>Vale Compras</td>
+                      </tr>
+                      <tr>
+                        <td>5</td>
+                        <td>Marina</td>
+                        <td>1.320</td>
+                        <td><span class="badge bg-warning">Ouro</span></td>
+                        <td>Kit Swift</td>
+                      </tr>
+                      <tr>
+                        <td>6</td>
+                        <td>Rafael</td>
+                        <td>1.200</td>
+                        <td><span class="badge bg-warning">Ouro</span></td>
+                        <td>Kit Swift</td>
+                      </tr>
+                      <tr>
+                        <td>7</td>
+                        <td>Patrícia</td>
+                        <td>1.050</td>
+                        <td><span class="badge bg-info">Prata</span></td>
+                        <td>Dia de folga</td>
+                      </tr>
+                      <tr>
+                        <td>8</td>
+                        <td>André</td>
+                        <td>980</td>
+                        <td><span class="badge bg-info">Prata</span></td>
+                        <td>Dia de folga</td>
+                      </tr>
+                      <tr>
+                        <td>9</td>
+                        <td>Camila</td>
+                        <td>900</td>
+                        <td>
+                          <span class="badge bg-light text-dark">Bronze</span>
+                        </td>
+                        <td>Brinde</td>
+                      </tr>
+                      <tr>
+                        <td>10</td>
+                        <td>Thiago</td>
+                        <td>850</td>
+                        <td>
+                          <span class="badge bg-light text-dark">Bronze</span>
+                        </td>
+                        <td>Brinde</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-6">
-            <div class="card h-100">
-              <div class="card-header">Geral (Regional)</div>
-              <div class="table-responsive">
-                <table class="table align-middle mb-0 table-ranking">
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>Colaborador</th>
-                      <th>Pontos</th>
-                      <th>Título</th>
-                      <th>Recompensa</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr><td>1</td><td>Fagner</td><td>2.250</td><td><span class="badge bg-dark">Lenda Swift</span></td><td>Viagem</td></tr>
-                    <tr><td>2</td><td>Lucas</td><td>2.020</td><td><span class="badge bg-dark">Lenda Swift</span></td><td>Viagem</td></tr>
-                    <tr><td>3</td><td>Evelyn</td><td>1.720</td><td><span class="badge bg-secondary">Mestre</span></td><td>Vale Compras</td></tr>
-                    <tr><td>4</td><td>João</td><td>1.500</td><td><span class="badge bg-secondary">Mestre</span></td><td>Vale Compras</td></tr>
-                    <tr><td>5</td><td>Marina</td><td>1.320</td><td><span class="badge bg-warning">Ouro</span></td><td>Kit Swift</td></tr>
-                    <tr><td>6</td><td>Rafael</td><td>1.200</td><td><span class="badge bg-warning">Ouro</span></td><td>Kit Swift</td></tr>
-                    <tr><td>7</td><td>Patrícia</td><td>1.050</td><td><span class="badge bg-info">Prata</span></td><td>Dia de folga</td></tr>
-                    <tr><td>8</td><td>André</td><td>980</td><td><span class="badge bg-info">Prata</span></td><td>Dia de folga</td></tr>
-                    <tr><td>9</td><td>Camila</td><td>900</td><td><span class="badge bg-light text-dark">Bronze</span></td><td>Brinde</td></tr>
-                    <tr><td>10</td><td>Thiago</td><td>850</td><td><span class="badge bg-light text-dark">Bronze</span></td><td>Brinde</td></tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
+      </section>
     </div>
 
-    <footer class="py-4 mt-4">
-      <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
+    <footer class="py-4">
+      <div
+        class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
+      >
         <div class="text-muted small">
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html"
+            >Ajuda</a
+          >
         </div>
       </div>
     </footer>
