--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Sistema de Autenticação -->
     <script src="assets/js/auth.js"></script>
+    <script src="assets/js/avatar.js"></script>
     <script>
       // Proteger página - qualquer usuário logado pode acessar
       window.checkPageAccess();
@@ -204,10 +205,16 @@
                     src="https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=400&auto=format&fit=crop"
                     alt="Avatar do Colaborador"
                     class="avatar-xl"
+                    data-user-avatar
                   />
                   <div>
                     <div class="d-flex align-items-center gap-2">
-                      <h1 class="h4 m-0">Lucas (Colaborador)</h1>
+                      <h1 class="h4 m-0">
+                        <span data-user-name>Lucas</span> (<span
+                          data-user-role-display
+                          >Colaborador</span
+                        >)
+                      </h1>
                       <span class="badge badge-level">Ouro</span>
                     </div>
                     <div class="text-muted small">
